--- a/samples.html
+++ b/samples.html
@@ -10,8 +10,7 @@
 
   <div class="directory">
     <div class="sub">
-
-      <div> <a href="home.html" class="home">HOME</a></div>
+      <div> <a href="index.html" class="home">HOME</a></div>
       <div><a href="sound_design.html" class="sdesign">SOUND DESIGN</a></div>
       <div><a href="samples.html" class="samples">SAMPLES</a></div>
       <div><a href="songs.html" class="songs">SONGS</a></div>
@@ -23,7 +22,7 @@
     designing a
     transition for him. He provided me with the video sample and I was able to create unique and cool sounding effects
     that would help him transition cameras when he streams. He's a really awesome guy that loves building gundams and
-    playing games! Check out his channel <a href="https://www.twitch.tv/steez93">here!</a>
+    playing games! Check out his channel <a href="https://www.twitch.tv/steez93" id="twitch">here!</a>
   </p>
 
   <div class="videos">
@@ -43,8 +42,31 @@
     </video>
   </div>
 
-  <audio controls src="wobble.mp3"></audio>
-  <img src="logo2.png" class="logo2" alt="logo">
+  <br>
+
+  <div class="word">
+    <p>Below is a short video clip from a video game called Tunic that I muted and then overlayed all the
+      sound design. Every single sound you are hearing came from me!
+    </p>
+    <video controls class="tunicvideo">
+      <source src="Tunicsound.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <br>
+  <div class="sounds">
+    <p>Below you can listen to some sound clips I have created and used in my own tracks!</p>
+    <audio controls src="wobble.mp3"></audio>
+    <audio controls src="slide.mp3"></audio>
+    <audio controls src="slide2.mp3"></audio>
+    <audio controls src="slide3.mp3"></audio>
+    <audio controls src="slide4.mp3"></audio>
+    <audio controls src="slide5.mp3"></audio>
+    <audio controls src="slide6.mp3"></audio>
+    <audio controls src="slide7.mp3"></audio>
+    <img src="logo2.png" class="logo2" alt="logo">
+  </div>
 
 
 </body>
