--- a/songs.html
+++ b/songs.html
@@ -10,7 +10,7 @@
 <body>
   <div class="directory">
     <div class="sub">
-      <div> <a href="home.html" class="home">HOME</a></div>
+      <div> <a href="index.html" class="home">HOME</a></div>
       <div><a href="sound_design.html" class="sdesign">SOUND DESIGN</a></div>
       <div><a href="samples.html" class="samples">SAMPLES</a></div>
       <div><a href="songs.html" class="songs">SONGS</a></div>
@@ -33,8 +33,8 @@
     <p>Below you can see a screen shot from of the final production layout from one of my tracks. There are three
       main groups that I
       used to organize this song: the drums, the fx, and the bass. All together, there are over 100 channels of
-      different
-      sounds throughout the song.</p>
+      different sounds throughout the song. You can find all my songs on my <a href="https://soundcloud.com/john-luce"
+        class="soundcloud" id="soundcloud">Soundcloud</a>.</p>
   </div>
 
 
