--- a/sound_design.html
+++ b/sound_design.html
@@ -9,7 +9,7 @@
 <body>
   <div class="directory">
     <div class="sub">
-      <div> <a href="home.html" class="home">HOME</a></div>
+      <div> <a href="index.html" class="home">HOME</a></div>
       <div><a href="sound_design.html" class="sdesign">SOUND DESIGN</a></div>
       <div><a href="samples.html" class="samples">SAMPLES</a></div>
       <div><a href="songs.html" class="songs">SONGS</a></div>
