--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
+
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>John Luce</title>
 </head>
 
@@ -27,14 +29,13 @@
       just know that I am in the very early stages of learning.<br><br><br><br>
       About me: I was born and raised in Florida all my life while spending time in the keys, playing sports, and
       learning guitar. I graduated from Florida State University with a B.S. in entrepreneurship in spring 2020 right as
-      covid was ramping up. Shortly after graduating I was able to earn an opportunity to work a great company called
+      covid was ramping up. Shortly after graduating I was able to earn an opportunity to work at a great company called
       Argo AI as an autonomous vehicle systems test specialist. Argo AI manufactured software for self driving cars and
       had
       partnerships with Ford, VW, and Lyft with several locations across the U.S. and Germany. I grew with the company
       and had been promoted within my first year there. Unfortunately the company had shut down and everyone got laid
       off, including myself. However, I took the opportunity with my new free time to learn a new skill, hence the
       creation of this website!
-
     </p>
   </div>
 
