--- a/index.html
+++ b/index.html
@@ -18,16 +18,26 @@
     </div>
   </div>
   <br>
+
   <div class="about">
     <img src="argo.jpg" alt="argo" class="argo">
-    <p class="aboutme">Hello, and welcome to my personal website! On this site, I have put together different pages that
+
+    <p class="aboutme1">Hello, and welcome to my personal website! On this site, I have put together different pages
+      that
       go over things in my skillset and hobbies. You can find things from videos, to songs, to even learning about
       sounds! Not only is this site displaying my sound abilities, but also my programming abilities. This entire site
       was
       coded by me using HTML and CSS. I encourage you to visit my <a href="https://github.com/Johnluce"
         id="github">Github</a>, but
       just know that I am in the very early stages of learning.<br><br><br><br>
-      About me: I was born and raised in Florida all my life while spending time in the keys, playing sports, and
+    </p>
+  </div>
+  <img src="logo2.png" class="logo2" alt="logo">
+  <div class="aboutme2">
+    <h2>About me:</h2>
+    <p>I was born and raised in Florida all my life while spending time in the keys,
+      playing
+      sports, and
       learning guitar. I graduated from Florida State University with a B.S. in entrepreneurship in spring 2020 right as
       covid was ramping up. Shortly after graduating I was able to earn an opportunity to work at a great company called
       Argo AI as an autonomous vehicle systems test specialist. Argo AI manufactured software for self driving cars and
@@ -35,17 +45,8 @@
       partnerships with Ford, VW, and Lyft with several locations across the U.S. and Germany. I grew with the company
       and had been promoted within my first year there. Unfortunately the company had shut down and everyone got laid
       off, including myself. However, I took the opportunity with my new free time to learn a new skill, hence the
-      creation of this website!
-    </p>
+      creation of this website!</p>
   </div>
-
-  <img src="logo2.png" class="logo2" alt="logo">
-
 </body>
-
-
-
-
-
 
 </html>
