--- a/sound_design.html
+++ b/sound_design.html
@@ -4,6 +4,7 @@
 
 <head>
   <title>Sound design</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -58,7 +59,7 @@
       These synthesizers offer a wide variety of ways to design sound in their own unique ways and are offered at
       different price points. For this example, we will use Vital made by Matt Tytel.</p>
 
-    <img src="vital-synthesizer.webp" alt="vital" class="vital">
+    <img src="vital-synthesizer.png" alt="vital" class="vital">
 
     <p class="osc">As you can see in the OSC(oscillator) 1 lane, there is a sine wave placed which gives us the basic
       sound foundation of all sounds. However, there is more than OSC lane active. On the second one, there is also a
