--- a/index.html
+++ b/index.html
@@ -39,13 +39,10 @@
       playing
       sports, and
       learning guitar. I graduated from Florida State University with a B.S. in entrepreneurship in spring 2020 right as
-      covid was ramping up. Shortly after graduating I was able to earn an opportunity to work at a great company called
-      Argo AI as an autonomous vehicle systems test specialist. Argo AI manufactured software for self driving cars and
-      had
-      partnerships with Ford, VW, and Lyft with several locations across the U.S. and Germany. I grew with the company
-      and had been promoted within my first year there. Unfortunately the company had shut down and everyone got laid
-      off, including myself. However, I took the opportunity with my new free time to learn a new skill, hence the
-      creation of this website!</p>
+      covid was ramping up. Since everyone was stuck at home with no end in sight, I decided to learn a new skill at
+      home to keep myself occupied and happy. I've always loved music and went to some music festivals and concerts
+      while I was in college and grew a passion for electronic music. Long story short, and three years later I have
+      created several songs and have gotten way better at producing!</p>
   </div>
 </body>
 
