--- a/sound_design.html
+++ b/sound_design.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="wavesadd">
-    <p>We can manipulate these waves in infinite ways to achieve<br> different sounds by using effects in
+    <p>We can manipulate these waves in a finite amount of ways to achieve<br> different sounds by using effects in
       synthesizers.<br> <br>Some effects are but not limited to:
     </p>
     <ul>
